Ability to invoke operation call.

--- a/jdk-1.6-parent/mbeanview-parent/mbeanview/src/main/resources/org/wicketstuff/mbeanview/mbeanview.css
+++ b/jdk-1.6-parent/mbeanview-parent/mbeanview/src/main/resources/org/wicketstuff/mbeanview/mbeanview.css
@@ -52,14 +52,11 @@
 	display: inline-block;
 	margin: 0;
 }
-.mbeanview .view .tab-panel .operations dt > pre:first-child {
-	min-width: 10em;
-	text-align: right;
+.mbeanview .view .tab-panel .operations form {
+	margin: 0;
 }
-.mbeanview .view .tab-panel .operations dd {
-	padding-left: 10em;
-	font-style: italic;
-	margin: 0 0 1em 0;
+.mbeanview .view .tab-panel .operations td:first-child {
+	text-align: right;
 }
 .mbeanview .view .tab-panel .operations input {
 	height: 1.2em;
