--- a/jdk-1.6-parent/mbeanview-parent/mbeanview/src/main/resources/org/wicketstuff/mbeanview/mbeanview.css
+++ b/jdk-1.6-parent/mbeanview-parent/mbeanview/src/main/resources/org/wicketstuff/mbeanview/mbeanview.css
@@ -1,79 +1,66 @@
-.mbeanview .tree {
-	padding: 0 1em 1em 1em;
-	border: 1px solid silver;
-	display: inline-block;
-}
-.mbeanview .tree .tree-mbean {
+/* Custom tree icons */
+.mbeanspanel .tree .tree-mbean {
 	background-image: url(mbean.gif);
 	background-size: 16px;
 }
-.mbeanview .tree .tree-mbean-delegate {
+.mbeanspanel .tree .tree-mbean-delegate {
 	background-image: url(mbeanserverdelegate.gif);
 	background-size: 16px;
 }
-.mbeanview .tree .tree-content .selected .tree-label {
+.mbeanspanel .tree .tree-content .selected .tree-label {
 	color: red;
 	background-color: transparent;
 }
 
-.mbeanview .view {
-	display: inline-block;
-	border: 1px solid silver;
-	vertical-align: top;
-}
-.mbeanview .view .tab-row ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	border-bottom: 1px solid silver;
-	display: table;
-	width: 100%;
-}
-.mbeanview .view .tab-row ul li {
-	display: table-cell;
-	overflow: hidden;
-}
-.mbeanview .view .tab-row ul li.selected {
-	background-color: whitesmoke;
-}
-.mbeanview .view .tab-row ul li:not(.last) {
-	border-right: 1px solid silver;
-}
-.mbeanview .view .tab-row ul a {
-	display: block;
-	padding: .2em .4em;
-	text-decoration: none;
-	width: 100%;
-}
-.mbeanview .view .tab-panel {
-	padding: .5em;
-}
-.mbeanview .view .tab-panel .attributes {
-	border-collapse: collapse;
-}
-.mbeanview .view .tab-panel .attributes tr:nth-child(2n) {
-	background-color: whitesmoke;
-}
-.mbeanview .view .tab-panel .attributes td {
-	padding: .4em;
-}
-.mbeanview .view .tab-panel .operations pre {
-	display: inline-block;
+/* Bootstrap changes */
+.mbeanspanel .table .form-inline {
 	margin: 0;
 }
-.mbeanview .view .tab-panel .operations form {
-	margin: 0;
-}
-.mbeanview .view .tab-panel .operations td:first-child {
-	text-align: right;
-}
-.mbeanview .view .tab-panel .operations input {
-	height: 1.2em;
-	border-width: 1px;
+.mbeanspanel .attributes.table td:first-child {
 	vertical-align: middle;
+}
+.mbeanspanel .operations.table code {
+	background-color: transparent;
+	border: none;
+}
+.mbeanspanel .operations.table td:first-child {
+	text-align: right;
+	vertical-align: middle;
+}
+.mbeanspanel .operations.table input {
 	text-align: center;
 }
 
+/* No-bootstrap style */
+body:not(.bootstrap) .mbeanspanel [class*=span] {
+	display: inline-block;
+	vertical-align: top;
+	margin-left: 1em;
+}
+body:not(.bootstrap) .mbeanspanel .table-striped tr:nth-child(2n) {
+	background-color: whitesmoke;
+}
+body:not(.bootstrap) .mbeanspanel .nav.nav-tabs {
+	border-bottom: 1px solid #ddd;
+	margin-left: 0;
+	list-style: none;
+}
+body:not(.bootstrap) .mbeanspanel .nav.nav-tabs > li {
+	margin-bottom: -1px;
+	display: inline-block;
+}
+body:not(.bootstrap) .mbeanspanel .nav.nav-tabs > li > a {
+	display: block;
+	padding: 8px;
+}
+body:not(.bootstrap) .mbeanspanel .nav.nav-tabs > li.active > a {
+	color: #555;
+	border: 1px solid #ddd;
+	border-radius: 4px 4px 0 0;
+	border-bottom-color: white;
+}
+
+/* Modal window */
 .wicket-modal .result-output {
 	white-space: pre-wrap;
 }
